// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`appearanceToCollectCss > matches the dark theme snapshot 1`] = `
{
  "customCss": {
    "background-color": "#0b0b22",
    "border-bottom-color": "rgba(255, 255, 255, 0.14)",
    "border-bottom-style": "solid",
    "border-bottom-width": "1px",
    "border-left-color": "rgba(255, 255, 255, 0.14)",
    "border-left-style": "solid",
    "border-left-width": "1px",
    "border-radius": "10px",
    "border-right-color": "rgba(255, 255, 255, 0.14)",
    "border-right-style": "solid",
    "border-right-width": "1px",
    "border-top-color": "rgba(255, 255, 255, 0.14)",
    "border-top-style": "solid",
    "border-top-width": "1px",
    "color": "#f2f2f8",
    "font-family": "'Inter', -apple-system, 'Segoe UI', sans-serif",
    "font-size": "16px",
    "height": "44px",
    "padding": "12px",
    "transition": "border-color 150ms ease, box-shadow 150ms ease, background-color 150ms ease",
  },
  "focusCss": {
    "background-color": "#0b0b22",
    "border-bottom-color": "#f04ac4",
    "border-left-color": "#f04ac4",
    "border-right-color": "#f04ac4",
    "border-top-color": "#f04ac4",
    "box-shadow": "0 0 0 3px rgba(240, 74, 196, 0.16)",
    "outline-style": "none",
  },
  "googleFont": "Inter:400,500,600",
  "invalidCss": {
    "border-bottom-color": "#e5484d",
    "border-left-color": "#e5484d",
    "border-right-color": "#e5484d",
    "border-top-color": "#e5484d",
    "box-shadow": "0 0 0 3px rgba(229, 72, 77, 0.14)",
  },
  "placeholderCss": {
    "color": "#9a9ab8",
    "font-family": "'Inter', -apple-system, 'Segoe UI', sans-serif",
    "font-size": "16px",
  },
  "validCss": {
    "border-bottom-color": "#30a46c",
    "border-left-color": "#30a46c",
    "border-right-color": "#30a46c",
    "border-top-color": "#30a46c",
  },
}
`;

exports[`appearanceToCollectCss > matches the default theme snapshot 1`] = `
{
  "customCss": {
    "background-color": "#ffffff",
    "border-bottom-color": "#e4e4ec",
    "border-bottom-style": "solid",
    "border-bottom-width": "1px",
    "border-left-color": "#e4e4ec",
    "border-left-style": "solid",
    "border-left-width": "1px",
    "border-radius": "10px",
    "border-right-color": "#e4e4ec",
    "border-right-style": "solid",
    "border-right-width": "1px",
    "border-top-color": "#e4e4ec",
    "border-top-style": "solid",
    "border-top-width": "1px",
    "color": "#141442",
    "font-family": "'Inter', -apple-system, 'Segoe UI', sans-serif",
    "font-size": "16px",
    "height": "44px",
    "padding": "12px",
    "transition": "border-color 150ms ease, box-shadow 150ms ease, background-color 150ms ease",
  },
  "focusCss": {
    "background-color": "#ffffff",
    "border-bottom-color": "#f04ac4",
    "border-left-color": "#f04ac4",
    "border-right-color": "#f04ac4",
    "border-top-color": "#f04ac4",
    "box-shadow": "0 0 0 3px rgba(240, 74, 196, 0.16)",
    "outline-style": "none",
  },
  "googleFont": "Inter:400,500,600",
  "invalidCss": {
    "border-bottom-color": "#e5484d",
    "border-left-color": "#e5484d",
    "border-right-color": "#e5484d",
    "border-top-color": "#e5484d",
    "box-shadow": "0 0 0 3px rgba(229, 72, 77, 0.14)",
  },
  "placeholderCss": {
    "color": "#989898",
    "font-family": "'Inter', -apple-system, 'Segoe UI', sans-serif",
    "font-size": "16px",
  },
  "validCss": {
    "border-bottom-color": "#30a46c",
    "border-left-color": "#30a46c",
    "border-right-color": "#30a46c",
    "border-top-color": "#30a46c",
  },
}
`;

exports[`appearanceToCollectCss > matches the minimal theme snapshot 1`] = `
{
  "customCss": {
    "background-color": "#ffffff",
    "border-bottom-color": "#d9d9de",
    "border-bottom-style": "solid",
    "border-bottom-width": "1px",
    "border-left-color": "#d9d9de",
    "border-left-style": "solid",
    "border-left-width": "1px",
    "border-radius": "6px",
    "border-right-color": "#d9d9de",
    "border-right-style": "solid",
    "border-right-width": "1px",
    "border-top-color": "#d9d9de",
    "border-top-style": "solid",
    "border-top-width": "1px",
    "color": "#1a1a1a",
    "font-family": "'Inter', -apple-system, 'Segoe UI', sans-serif",
    "font-size": "16px",
    "height": "44px",
    "padding": "12px",
    "transition": "border-color 150ms ease, box-shadow 150ms ease, background-color 150ms ease",
  },
  "focusCss": {
    "background-color": "#ffffff",
    "border-bottom-color": "#141442",
    "border-left-color": "#141442",
    "border-right-color": "#141442",
    "border-top-color": "#141442",
    "box-shadow": "0 0 0 3px rgba(20, 20, 66, 0.16)",
    "outline-style": "none",
  },
  "googleFont": "Inter:400,500,600",
  "invalidCss": {
    "border-bottom-color": "#e5484d",
    "border-left-color": "#e5484d",
    "border-right-color": "#e5484d",
    "border-top-color": "#e5484d",
    "box-shadow": "0 0 0 3px rgba(229, 72, 77, 0.14)",
  },
  "placeholderCss": {
    "color": "#9b9b9b",
    "font-family": "'Inter', -apple-system, 'Segoe UI', sans-serif",
    "font-size": "16px",
  },
  "validCss": {
    "border-bottom-color": "#30a46c",
    "border-left-color": "#30a46c",
    "border-right-color": "#30a46c",
    "border-top-color": "#30a46c",
  },
}
`;
